# Matbakhi_prototype

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .prettierignore  .pylintrc  README.md  USAGE.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  setup.cfg  setup_env.sh
backend/: .pylintrc  Dockerfile  entrypoint.sh  pyproject.toml
backend/api/: manage.py
backend/api/.chroma/index/: id_to_uuid_e7118bf8-bf42-40bd-b599-614868121085.pkl  index_metadata_e7118bf8-bf42-40bd-b599-614868121085.pkl  uuid_to_id_e7118bf8-bf42-40bd-b599-614868121085.pkl
backend/api/api/: __init__.py  asgi.py  celery.py  db.sqlite3  urls.py  wsgi.py
backend/api/api/settings/: default.py  test.py  testing_env.py
backend/api/whatsapp/: openai_api.py
frontend/: .eslintrc.json  Dockerfile  package.json
